force-app/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Should be checked if the contact is currently active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>