force-app/main/default/objects/Contact/fields/Age_of_Residents_in_Home__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Residents_in_Home__c</fullName>
    <label>Age of Residents in Home</label>
    <length>80</length>
    <type>Text</type>
</CustomField>