force-app/main/default/objects/Contact/fields/ASPCA_Liaison__c.field-meta.xml
<CustomField>
    <fullName>ASPCA_Liaison__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASPCA Liaison</label>
    <type>Checkbox</type>
</CustomField>