force-app/main/default/objects/Contact/fields/Borough__c.field-meta.xml
<CustomField>
    <fullName>Borough__c</fullName>
    <label>Borough</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Bronx</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>Queens</fullName>
            </value>
            <value>
                <fullName>Staten Island</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Out-of-State</fullName>
            </value>
            <value>
                <fullName>Long Island</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>