force-app/main/default/objects/Contact/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Id ,  FirstName + &quot; &quot; + LastName )</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>