force-app/main/default/objects/Contact/fields/Contact_Detail_for_Flow__c.field-meta.xml
<CustomField>
    <fullName>Contact_Detail_for_Flow__c</fullName>
    <formula>FirstName  &amp;&quot; &quot;&amp; LastName  &amp;&quot; - &quot;&amp; MailingStreet &amp;&quot; ,&quot;&amp; MailingCity &amp;&quot;, &quot;&amp;  MailingState &amp;&quot; - Account:&quot;&amp; Account.Name &amp;&quot; - Contact Type:&quot;&amp; Text(Contact_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Detail for Flow</label>
    <type>Text</type>
</CustomField>