force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Agency Representative</fullName>
            </value>
            <value>
                <fullName>Animal Control Officer</fullName>
            </value>
            <value>
                <fullName>Animal Owner</fullName>
            </value>
            <value>
                <fullName>Animal Rescue</fullName>
            </value>
            <value>
                <fullName>Animal Welfare Professional</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Code Enforcement Officer</fullName>
            </value>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>County/Civil Attorney</fullName>
            </value>
            <value>
                <fullName>Defense Attorney</fullName>
            </value>
            <value>
                <fullName>Law Enforcement Contact</fullName>
            </value>
            <value>
                <fullName>Law Enforcement Officer</fullName>
            </value>
            <value>
                <fullName>Local Elected Official</fullName>
            </value>
            <value>
                <fullName>Officer/Complainant</fullName>
            </value>
            <value>
                <fullName>Prosecuting Attorney</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>Senator</fullName>
            </value>
            <value>
                <fullName>Shelter Contact</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>State Representative</fullName>
            </value>
            <value>
                <fullName>State Senator</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>US Representative</fullName>
            </value>
            <value>
                <fullName>US Senator</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Relocation Driver</fullName>
            </value>
            <value>
                <fullName>Behavior Case Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>