force-app/main/default/objects/Contact/fields/County_Lookup__c.field-meta.xml
<CustomField>
    <fullName>County_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>