force-app/main/default/objects/Contact/fields/Drivers_License_or_State_ID__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_or_State_ID__c</fullName>
    <label>Driver&apos;s License #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>