force-app/main/default/objects/Contact/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <label>Expiration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>