force-app/main/default/objects/Contact/fields/Facebook_Page__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Page__c</fullName>
    <label>Facebook Page</label>
    <type>Url</type>
</CustomField>