force-app/main/default/objects/Contact/fields/Financial_Resources__c.field-meta.xml
<CustomField>
    <fullName>Financial_Resources__c</fullName>
    <label>Financial Resources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>