force-app/main/default/objects/Contact/fields/History_of_Animal_Hoarding__c.field-meta.xml
<CustomField>
    <fullName>History_of_Animal_Hoarding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box for Yes</inlineHelpText>
    <label>History of Animal Hoarding</label>
    <type>Checkbox</type>
</CustomField>