force-app/main/default/objects/Contact/fields/Instagram_Page__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Page__c</fullName>
    <label>Instagram Page</label>
    <type>Url</type>
</CustomField>