force-app/main/default/objects/Contact/fields/Intelligence_Report__c.field-meta.xml
<CustomField>
    <fullName>Intelligence_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the intelligence report the contact record was created from</description>
    <label>Intelligence Report</label>
    <referenceTo>Tips_Intel__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>