force-app/main/default/objects/Contact/fields/Is_Generic_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Generic_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Generic Contact</label>
    <type>Checkbox</type>
</CustomField>