force-app/main/default/objects/Contact/fields/License_or_ID_State__c.field-meta.xml
<CustomField>
    <fullName>License_or_ID_State__c</fullName>
    <label>License or ID State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>