force-app/main/default/objects/Contact/fields/Number_of_Residents_in_Home__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Residents_in_Home__c</fullName>
    <label>Number of Residents in Home</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>