force-app/main/default/objects/Contact/fields/Socaial_Services_Provider__c.field-meta.xml
<CustomField>
    <fullName>Socaial_Services_Provider__c</fullName>
    <label>Social Services Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>