force-app/main/default/objects/Contact/fields/Social_Services__c.field-meta.xml
<CustomField>
    <fullName>Social_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box for Yes</inlineHelpText>
    <label>Social Services</label>
    <type>Checkbox</type>
</CustomField>