force-app/main/default/objects/Contact/fields/Twitter_Page__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Page__c</fullName>
    <label>Twitter Page</label>
    <type>Url</type>
</CustomField>