force-app/main/default/objects/Contact/fields/User_Location__c.field-meta.xml
<CustomField>
    <fullName>User_Location__c</fullName>
    <formula>TEXT(User__r.Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Location</label>
    <type>Text</type>
</CustomField>