force-app/main/default/objects/Contact/recordTypes/FIR_Contacts.recordType-meta.xml
<RecordType>
    <fullName>FIR_Contacts</fullName>
    <active>false</active>
    <description>This record type can consist of Suspects, Animal Owners or Complainants</description>
    <label>FIR Contacts</label>
</RecordType>