force-app/main/default/objects/Contact/recordTypes/Law_Enforcement.recordType-meta.xml
<RecordType>
    <fullName>Law_Enforcement</fullName>
    <active>false</active>
    <description>This record type should be used for any Agency based contacts.</description>
    <label>Agency Contacts</label>
</RecordType>