force-app/main/default/objects/Contact/recordTypes/Legal_Advocacy_Contact.recordType-meta.xml
<RecordType>
    <fullName>Legal_Advocacy_Contact</fullName>
    <active>false</active>
    <label>Legal Advocacy Contact</label>
</RecordType>