force-app/main/default/objects/Contact/validationRules/Add_Case_Worker_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Case_Worker_Email</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Contact_Type__c , &quot;Behavior Case Worker&quot;) &amp;&amp;
Email = null</errorConditionFormula>
    <errorMessage>Add Email for the Case Worker</errorMessage>
</ValidationRule>