force-app/main/default/objects/Contact/validationRules/City_state_required.validationRule-meta.xml
<ValidationRule>
    <fullName>City_state_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(MailingCountryCode,&apos;United States&apos;), OR( MailingCity =&apos;&apos;,  MailingState =&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>MailingCity</errorDisplayField>
    <errorMessage>The City and State are required.</errorMessage>
</ValidationRule>