force-app/main/default/objects/Contact/listViews/Citizen_Contacts.listView-meta.xml
<ListView>
    <fullName>Citizen_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Contact_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.FIR_Contacts</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Citizen,Complainant</value>
    </filters>
    <label>Citizen and Complainant Contacts</label>
</ListView>