force-app/main/default/objects/Contact/listViews/Citizens_Animal_Owners_and_Suspect.listView-meta.xml
<ListView>
    <fullName>Citizens_Animal_Owners_and_Suspect</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Contact_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.FIR_Contacts</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Citizen,Suspect</value>
    </filters>
    <label>Citizens - Animal Owners and Suspect</label>
</ListView>